deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  labels:
    app: emby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emby
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: emby
    spec:
      containers:
      - name: emby
        image: emby/embyserver
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "250m"
            memory: "1024Mi"
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: programdata
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
      volumes:
      - name: programdata
        emptyDir: {}
      - name: tv
        emptyDir: {}
      - name: movies
        emptyDir: {}
