service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  labels:
    app: emby
spec:
  ports:
  - port: 8096
    targetPort: 8096
  selector:
    app: emby
