ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emby
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: emby.local
    http:
      paths:
      - path: /
        backend:
          serviceName: emby
          servicePort: 8096
